spacing changes, fix mosaic link

--- a/global/scss/base/_functions.scss
+++ b/global/scss/base/_functions.scss
@@ -81,7 +81,7 @@ $page-interior: 1100px;
 			color: currentColor;
 			opacity: 1;
 			text-decoration: underline;
-			text-decoration-color: rgba(255, 255, 255, 0.3);
+			text-decoration-color: rgba(255, 255, 255, 0.6);
 		}
 	}
 	a.simple {
@@ -90,7 +90,7 @@ $page-interior: 1100px;
 		&:hover,
 		&:focus {
 			text-decoration: underline;
-			text-decoration-color: rgba(255, 255, 255, 0.3);
+			text-decoration-color: rgba(255, 255, 255, 0.6);
 			filter: brightness(100%);
 		}
 	}
