--- a/templates/blocks/account-features/account-features.scss
+++ b/templates/blocks/account-features/account-features.scss
@@ -12,6 +12,7 @@ ul.account-features-list {
 		column-count: 2;
 	}
 	> li {
+		display: inline-block;
 		-webkit-column-break-inside: avoid;
 		-moz-column-break-inside: avoid;
 		-moz-page-break-inside: avoid;
@@ -21,6 +22,10 @@ ul.account-features-list {
 		text-indent: -1em;
 		p {
 			display: inline;
+		}
+		i,
+		svg {
+			color: var(--color-primary);
 		}
 		.title {
 		}
