--- a/templates/blocks/hero/hero.scss
+++ b/templates/blocks/hero/hero.scss
@@ -90,11 +90,11 @@
 	}
 }
 
-.image-arrow {
-	opacity: .7;
+.corner-crosshair {
+	opacity: .5;
 	position: absolute;
-	width: 10em;
-	height: 10em;
+	width: 12em;
+	height: 12em;
 	bottom: 0;
 	right: 0;
 }
