--- a/templates/blocks/menu/menu-search.scss
+++ b/templates/blocks/menu/menu-search.scss
@@ -77,6 +77,9 @@ ul.menu-header-quick-links {
 	}
 	.search-wrapper {
 		display: flex;
+		label {
+			margin-bottom: $space-sm;
+		}
 	}
 	.search-form {
 		min-width: 30ch;
